Sortierung mehrere Spalten

--- a/club-manager/src/index.html
+++ b/club-manager/src/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
   <cl-root>
-    <mat-spinner color=accent"></mat-spinner>
-    <h3>Club Manager lädt...</h3>
+    <p>&nbsp; &nbsp; &nbsp; Club Manager lädt...</p>
   </cl-root>
 </body>
 </html>
